# discord-exporter

./: Cargo.toml
queries/: channel_summary.sql  message_authors.sql
src/: api.rs  main.rs  migration.rs
src/migrations/: 01_initial_schema.sql
