[package]
name = "discord-exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
clap = { version = "3.1.15", features = ["derive"] }
eyre = "0.6.8"
reqwest = { version = "0.11.10", features = ["json"] }
rusqlite = { version = "0.27.0", features = ["serde_json"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = { version = "1.0.80", features = ["preserve_order"] }
tokio = { version = "1.18.1", features = ["full"] }
